# cold-web-app

./: .gitattributes  .gitignore  AGENTS.md  AUTH0_SETUP.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  agents.md  conductor.json  directory_structure.txt  requirements.txt
backend/: .blueprint.env  .dockerignore  .env.blueprint  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MAPPING_VALIDATION.md  Makefile  POC_SUMMARY.md  PYDANTIC_SETTINGS_POC.md  README.md  agents.md  alembic.ini  app.py  config.py  debug_filtering.py  demo_pydantic_settings.py  docker-compose.yaml  pseudo-app.py  pyproject.toml  refactor_for_nocodb.md  requirements.txt  suggestions.dump  test_all_transformations.py  test_answers_mapping.py  test_configurable_transformers.py  test_regional_instruments_transformation.py  test_search_for_entry.py  test_sitemap_endpoint.py
backend/.claude/rules/: migrations.md  python-style.md  schemas.md  validation.md
backend/alembic/: env.py
backend/alembic/versions/: 202501041200_create_suggestions_tables.py  202602081400_create_entity_feedback_table.py
backend/alembic_suggestions/: alembic.ini  env.py
backend/alembic_suggestions/versions/: 202501041200_create_suggestions_tables.py  202501111200_add_analyzer_submitted_data_columns.py  202501111300_backfill_moderation_status.py  202602081400_create_entity_feedback_table.py
backend/alembic_views/: detail_config.py  detail_generator.py  env.py  script.py.mako
backend/alembic_views/versions/: 202603071000_initial_views.py  202603071100_rename_view_columns.py  202603081000_relation_views_and_detail_functions.py  202603081100_base_views_and_search_v3.py  202603081200_arbitral_fts_views.py  202603091000_answers_add_region.py  202603111000_expand_entity_relations.py  202604251000_sort_chronological_relations.py  202604251000_sort_court_decisions_by_date_desc.py  202604251100_search_pagination_tiebreaker.py  202604251200_sortable_date_date_overload.py  202604261800_questions_via_answers.py  202604261900_entity_has_theme_function.py  202604262200_dedupe_answers_questions_agg.py
backend/app/: auth.py  config.py  main.py  security.py  token-generation.py
backend/app/case_analysis/: config.py
backend/app/case_analysis/models/: __init__.py  analysis_models.py  classification_models.py
backend/app/case_analysis/prompts/: legal_system_type_detection.py  precise_jurisdiction_detection_prompt.py  prompt_selector.py
backend/app/case_analyzer/: __init__.py  config.py  consistency_checker.py  guardrails.py  quote_guardrail.py  resume.py  runner.py  service.py  validation.py
backend/app/mapping/: MIGRATION.md  REFACTORING_SUMMARY.md  domestic_instruments_mapping.json  enums.py
backend/app/routes/: ai.py  case_analysis.py  case_analyzer.py  entities.py  feedback.py  landing_page.py  moderation.py  search.py  sitemap.py  statistics.py  submarine.py  suggestions.py  user.py
backend/app/schemas/: __init__.py  case_analysis.py  case_analyzer.py  details.py  entities.py  feedback.py  logging.py  mapping_schema.py  records.py  relations.py  requests.py  responses.py  search_result.py  suggestions.py
backend/app/services/: ai.py  analysis_cache.py  azure_storage.py  case_analysis.py  case_analysis.py.old  configurable_transformer.py  court_decisions_transformer.py  database.py  db_manager.py  domestic_instruments_transformer.py  email_notifications.py  entity_counts.py  entity_list.py  filter_builder.py  http_session_manager.py  international_instruments_transformer.py  landing_page.py  mapping_repository.py  moderation_writer.py  nocodb.py  query_logging.py  regional_instruments_transformer.py  search.py  sitemap.py  statistics.py  suggestion_approval.py  suggestions.py  suggestions_schema.py  transformers.py  utils.py
backend/app/sql/: README.md  cron_job.sql  hop-1-graph.sql  nocodb_schema.sql  setup.sql
backend/bruno/: backend-testing.bru  classify-query.bru  curated-search-details.bru  curated-search.bru  curated_search_details.bru  flask-backend-container.bru  full-table.bru  full-text-search-filtered.bru  full-text-search-local.bru  full-text-search.bru  local-full-text-search.bru  local-search.bru
backend/data/: pseudo-curated-result.json
backend/database/: azure-sql.py  azure_sql.py
backend/docs/: CONNECTION_MANAGEMENT.md
backend/scripts/: export_openapi.py  generate_field_migration.py
backend/semantic-search/: embeddings_calculation.py  selection-for-semantic-embeddings.sql
backend/semantic-search/queries/: answers.sql  court-decisions.sql  legal-provisions.sql  legislations.sql
backend/services/: ai.py  database.py  embeddings.py  query_logging.py  search.py
backend/sql/: fts-with-filters.sql  issue15.sql  setup.sql  setup_suggestions.sql
backend/static/: styles-dark.css  styles-light.css  styles.css
backend/templates/: index.html
backend/testing/: test.py
backend/tests/: CASE_ANALYZER_TESTING.md  README.md  debug_filtering.py  debug_frontend_fields.py  debug_mapping.py  test_all_transformations.py  test_answers_mapping.py  test_auth.py  test_auth0_integration.py  test_case_analyzer_config.py  test_case_analyzer_insertion.py  test_case_analyzer_routes.py  test_case_analyzer_runner.py  test_case_analyzer_validation.py  test_case_citation_extractor.py  test_col_extractor.py  test_col_retrieval_baseline.py  test_config_settings.py  test_configurable_transformers.py  test_connection_managers.py  test_court_decisions_transformation.py  test_database_integration.py  test_document_nav.py  test_domestic_instruments_transformation.py  test_email_notifications.py  test_enum_values.py  test_filter_builder.py  test_final_verification.py  test_hybrid_retrieval.py  test_international_instruments_transformer.py  test_mapping_enums.py  test_mapping_repository_validation.py  test_mapping_schema.py  test_nocodb_api_integration.py  test_nocodb_structure.py  test_output_sanitization.py  test_pdf_handler.py  test_prompt_management.py  test_quote_guardrail.py  test_records.py  (+13 more)
backend/tests/fixtures/: col_retrieval_multilingual.json
backend/utils/: data_visualization.py  sorter.py  utils.py
(+1093 files in other folders)
