[project]
name = "backend"
version = "0.1.0"
description = "cold-backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio>=4.5.0",
    "attrs==24.3.0",
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.24.0",
    "blinker==1.8.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.4.1",
    "click==8.1.7",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "greenlet==3.0.3",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.7",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain-core>=0.3.78",
    "langchain-openai>=0.3.34",
    "logfire[fastapi,httpx,psycopg2,pymongo,requests,sqlalchemy]>=4.14.2",
    "markupsafe==2.1.5",
    "mixedbread-ai==2.2.6",
    "nest-asyncio>=1.6.0",
    "numpy==2.0.0",
    "openai-agents>=0.6.4",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.12.3",
    "pydantic-core>=2.20.1",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]==2.10.1",
    "pymongo==4.10.1",
    "pymupdf4llm>=0.0.27",
    "pyodbc==5.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "referencing==0.36.1",
    "requests==2.32.3",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.31",
    "starlette==0.41.3",
    "typing-extensions>=4.14.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "werkzeug==3.0.3",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "iniconfig>=2.0.0",
    "mypy-extensions>=1.0.0",
    "packaging>=24.2",
    "pathspec>=0.12.1",
    "platformdirs>=4.3.6",
    "pluggy>=1.5.0",
    "polyfactory>=2.20.0",
    "pre-commit>=4.1.0",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "pyright>=1.1.404",
    "vulture>=2.14",
]

[tool.uv]
package = true

[project.scripts]
serve = "app.main:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["chai"] }

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
