[project]
name = "backend"
version = "0.1.0"
description = "cold-backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "azure-identity>=1.19.0",
    "azure-storage-blob>=12.24.0",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "logfire[fastapi,httpx,psycopg2,requests,sqlalchemy]>=4.14.2",
    "openai>=1.0.0",
    "openai-agents>=0.6.4",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]==2.10.1",
    "pymupdf4llm>=0.0.27",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "resend>=2.0.0",
    "sqlalchemy==2.0.31",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "colorama>=0.4.6",
    "iniconfig>=2.0.0",
    "mypy-extensions>=1.0.0",
    "packaging>=24.2",
    "pathspec>=0.12.1",
    "platformdirs>=4.3.6",
    "pluggy>=1.5.0",
    "polyfactory>=2.20.0",
    "pre-commit>=4.1.0",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
    "pyright>=1.1.404",
    "vulture>=2.14",
]

[tool.uv]
package = true

[project.scripts]
serve = "app.main:main"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]
isort = { combine-as-imports = true, known-first-party = ["app"], known-third-party = ["alembic"] }

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
